RELENG-1133 Update Whitesource scan to upload report using jenkins-pipeline-libs